--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
         </div>
         <nav>
             <a href="#">Home</a>
-            <a href="#">About</a>
+            <a href="About.html">About</a>
             <a href="#">Login</a>
         </nav>
         <div class="profile">
