--- a/Index.html
+++ b/Index.html
@@ -12,9 +12,9 @@
             <img src="IP.png" alt="Logo">
         </div>
         <nav>
-            <a href="#">Home</a>
+            <a href="Index.html" style="font-style: italic; color: blue;">Home</a>
             <a href="About.html">About</a>
-            <a href="#">Login</a>
+            <a href="Login.html">Login</a>
         </nav>
         <div class="profile">
             <img src="profile.png" alt="Profile">
