--- a/About.html
+++ b/About.html
@@ -10,17 +10,17 @@
 
 <body>
     <header>
-        <div class="logo">
-            <img src="IP.png" alt="Logo">
-        </div>
-        <nav>
-            <a href="Index.html">Home</a>
-            <a href="About.html" style="font-style: italic; color: blue;">About</a>
-            <a href="#">Login</a>
-        </nav>
-        <div class="profile">
-            <img src="profile.png" alt="Profile">
-        </div>
+            <div class="logo">
+                <img src="IP.png" alt="Logo">
+            </div>
+            <nav>
+                <a href="Index.html">Home</a>
+                <a href="About.html" style="font-style: italic; color: blue;">About</a>
+                <a href="Login.html">Login</a>
+            </nav>
+            <div class="profile">
+                <img src="profile.png" alt="Profile">
+            </div>
     </header>
 
     <main>
